--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,11 +24,25 @@ a {
   height: 100vh;
 }
 
-.demoPage {
-  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.5);
+.demoPage, .cover {
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
   background-color: #EDEAE8;
   padding: 20px;
   border-radius: 5px;
+}
+
+.cover {
+  background-color: #CAAA97;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.cover h2 {
+  text-align: center;
+  position: relative;
+  top: 45%;
 }
 
 .demoPage img {
