--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,21 +22,28 @@ a {
   align-items: center;
   justify-content: center;
   height: 100vh;
-}
+} 
 
 .demoPage, .cover {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
   background-color: #EDEAE8;
-  padding: 20px;
+  // padding: 20px;
+  border-radius: 5px !important;
+  overflow: hidden;
+  object-fit: contain;
+}
+
+.demoPage {
   border-radius: 5px;
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
 }
 
 .cover {
   background-color: #CAAA97;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .cover h2 {
