--- a/components/BookFrontCover/bookFrontCover.module.scss
+++ b/components/BookFrontCover/bookFrontCover.module.scss
@@ -1,20 +1,27 @@
 .front {
-  background-color: #CAAA97;
+  // background-color: #CAAA97;
+  background-color: var(--main-color);
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #fff;
   
   img {
-    height: 300px;
+    height: 350px;
+    margin-top: 20px;
   }
 
   h2 {
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: bold;
   }
 
   h4 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: bold;
+  }
+  span {
+    font-size: 1.1rem;
+    font-weight: 600;
   }
 }
