--- a/components/ImageSection/imageSection.module.scss
+++ b/components/ImageSection/imageSection.module.scss
@@ -1,9 +1,8 @@
 .imageSection {
   img {
     width: 100%;
-    height: 100%;
-    max-height: 400px;
-    object-fit: cover;
-    object-fit: contain;
+    height: auto;
+    max-height: 500px;
+    // object-fit: contain;
   }
 }
