--- a/components/TextSection/textSection.module.scss
+++ b/components/TextSection/textSection.module.scss
@@ -1,3 +1,14 @@
 .textSection {
   padding: 20px;
+  border: 1px solid rgb(230, 230, 230);
+  margin: 5px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  p {
+    p {
+      span {
+        font-size: 1rem !important;
+      }
+    }
+  }
 }
