--- a/components/VideoSection/videoSection.module.scss
+++ b/components/VideoSection/videoSection.module.scss
@@ -1,11 +1,35 @@
 .videoSection {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0;
   button {
-    width: 100%;
-    height: 400px;
+    width: 100px;
+    height: 90px;
     overflow: hidden;
     border: none;
     padding: 0;
     background-color: transparent;
     outline: none;
+    padding: 5px;
+    img {
+      animation: rotate 5s infinite linear; 
+    }
+  }
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(10deg);
+    }
+    50% {
+      transform: rotate(0deg);
+    }
+    75% {
+      transform: rotate(-10deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
   }
 }
