--- a/components/modals/PreviewModal/previewModal.module.scss
+++ b/components/modals/PreviewModal/previewModal.module.scss
@@ -70,6 +70,7 @@
       transition: all 0.2s ease-in-out !important;
       &:hover {
         background-color: var(--main-color);
+        border: 1px solid var(--main-color);
       }
       &.ar {
         right: unset;
