--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,7 +26,7 @@ a {
 
 .demoPage, .cover {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  background-color: #EDEAE8;
+  background-color: var(--main-color);
   // padding: 20px;
   border-radius: 5px !important;
   overflow: hidden;
@@ -35,6 +35,7 @@ a {
 
 .demoPage {
   border-radius: 5px;
+  background: url('../public/imgs/back.png');
   img {
     width: 100%;
     height: 100%;
@@ -42,16 +43,96 @@ a {
   }
 }
 
+.demoPage {
+  &.unit {
+    h2 {
+      color: #fff;
+      background-color: var(--main-color);
+      display: inline-block;
+      padding: 5px 50px;
+      margin: 10px auto;
+      font-size: 1.5rem;
+      border-radius: 5px;
+    }
+    p {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+    img {
+      height: 350px;
+      width: 350px;
+      display: flex;
+      margin: auto;
+      animation: rotate 10s infinite linear;
+      filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.3));
+    }
+    @keyframes rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+      25% {
+        transform: rotate(20deg);
+      }
+      50% {
+        transform: rotate(0deg);
+      }
+      75% {
+        transform: rotate(-20deg);
+      }
+      100% {
+        transform: rotate(0deg);
+      }
+    }
+  }
+}
+
+.demoPage {
+  &.lesson {
+    h2 {
+      text-shadow: 2px 2px 8px var(--main-color);
+    }
+    p {
+      text-align: center;
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+    img {
+      filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.3));
+    }
+  }
+}
+
 .cover {
-  background-color: #CAAA97;
+  // background-color: #CAAA97;
+  background-color: var(--main-color);
 }
 
 .cover h2 {
   text-align: center;
   position: relative;
   top: 45%;
+  color: #fff;
 }
 
 .demoPage img {
   width: 100%;
+}
+
+button.wrapper {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  align-items: center;
+  position: relative;
+  img {
+    position: relative;
+    left: 0;
+    top: 0;
+    z-index: -1;
+  }
 }
