--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -9,6 +9,14 @@
     svg {
       color: red !important;
     }
+
+    .list {
+      padding: 5px;
+    }
+
+    .match {
+      padding: 5px;
+    }
   }
   svg {
     color: red !important;
