--- a/components/quizzes/FillInBlank/fillInBlank.module.scss
+++ b/components/quizzes/FillInBlank/fillInBlank.module.scss
@@ -7,6 +7,9 @@
       width: 150px;
       background-color: transparent !important;
       color: var(--main-color);
+      &.error {
+        color: red !important;
+      }
     }
   }
 
