--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -5,9 +5,9 @@
     justify-content: center;
     p {
       font-weight: 600;
-    }
-    svg {
-      color: red !important;
+      background-color: #ccc;
+      padding: 8px 10px;
+      border-radius: 5px;
     }
 
     .list {
@@ -18,7 +18,21 @@
       padding: 5px;
     }
   }
-  svg {
-    color: red !important;
+
+  .btn {
+    text-align: center;
+    margin-top: 30px;
+    button {
+      background-color: var(--main-color);
+      color: #fff;
+      border: 1px solid var(--main-color);
+      padding: 5px 20px;
+      border-radius: 5px;
+      outline: none;
+      &:hover {
+        background-color: transparent;
+        color: var(--main-color);
+      }
+    }
   }
 }
