--- a/components/quizzes/OpenEnded/openEnded.module.scss
+++ b/components/quizzes/OpenEnded/openEnded.module.scss
@@ -1,4 +1,8 @@
 .openEnded {
+  h6 {
+    font-size: 1.2rem;
+    text-align: center !important;
+  }
   input {
     margin-top: 20px;
     width: 100%;
