--- a/components/quizzes/FillInBlank/fillInBlank.module.scss
+++ b/components/quizzes/FillInBlank/fillInBlank.module.scss
@@ -1,6 +1,13 @@
 .fillInBlank {
-
+  h6 {
+    font-size: 1.2rem;
+    text-align: center !important;
+    margin-bottom: 1.5rem;
+  }
   .text {
+    background-color: rgb(235, 235, 235);
+    padding: 20px;
+    border-radius: 5px;
     input {
       border: none;
       outline: none;
