--- a/components/quizzes/ImageAnswering/imageAnswering.module.scss
+++ b/components/quizzes/ImageAnswering/imageAnswering.module.scss
@@ -1,17 +1,49 @@
+@import '../../../styles/mixins.scss';
+
 .imageAnswering {
-  .one {
-    margin-top: 20px;
-    border-radius: 5px;
-    img {
-      width: 100px;
+  h6 {
+    font-size: 1.2rem;
+    margin-bottom: 1.5rem;
+    text-align: center !important;
+  }
+  .answers {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+    .one {
       border-radius: 5px;
-      margin-right: 30px;
-    }
-    input {
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      outline: none;
-      padding: 5px 15px;
+      margin: 20px 10px 0;
+      grid-column: span 4;
+      text-align: center !important;
+      @include md {
+        grid-column: span 6;
+      }
+      @include sm {
+        grid-column: span 6;
+      }
+      @include xs {
+        grid-column: span 12;
+      }
+      img {
+        width: 150px;
+        border-radius: 5px;
+        margin-right: 30px;
+        display: block;
+        text-align: center !important;
+        margin: 0 auto 20px;
+        background-color: rgb(233, 233, 233);
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+      }
+      input {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        outline: none;
+        padding: 5px 15px;
+        margin: auto;
+        text-align: center !important;
+      }
     }
   }
 
