--- a/components/quizzes/ImageMatching/imageMatching.module.scss
+++ b/components/quizzes/ImageMatching/imageMatching.module.scss
@@ -2,30 +2,42 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  h6 {
+    font-size: 1.2rem;
+    text-align: center !important;
+    margin-bottom: 30px;
+  }
+  .wrapper {
+    background-color: rgb(241, 241, 241);
+    border-radius: 5px;
+  }
   .box {
-    margin-top: 50px !important;
+    margin-top: 20px;
     margin-left: 60px;
-    p {
-    }
   } 
   .answers {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 50px;
     h6 {
-      margin-right: 120px;
-      font-size: 1.2rem;
-      width: 200px;
+      margin-right: 60px;
+      font-size: 1.1rem;
+      width: 100px;
       text-align: center !important;
+      background-color: rgb(229, 229, 229);
+      border-radius: 5px;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+      padding: 8px 20px;
     }
   }
   img {
     width: 100px;
     height: 100px;
     margin-right: 1%;
-    background-color: #ccc;
+    background-color: rgb(229, 229, 229);
     border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   }
 
   .btn {
