--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -5,22 +5,28 @@
     justify-content: center;
     p {
       font-weight: 600;
-      background-color: rgb(222, 222, 222);
-      padding: 8px 10px;
+      color: #fff;
+      background-color: rgb(#40739e, 0.8);
+      // padding: 8px 10px;
       border-radius: 5px;
       width: 150px;
       box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
       text-align: center !important;
       margin-top: 10px;
+      cursor: pointer;
     }
 
     .list {
-      padding: 5px 15px;
+      padding: 0px 15px;
       background-color: rgb(238, 238, 238);
     }
 
+    // canvas {
+    //   width: 200px;
+    // }
+
     .match {
-      padding: 5px 15px;
+      padding: 0px 15px;
       background-color: rgb(238, 238, 238);
     }
   }
