--- a/components/quizzes/OrderingQuiz/orderingQuiz.module.scss
+++ b/components/quizzes/OrderingQuiz/orderingQuiz.module.scss
@@ -5,8 +5,8 @@
   }
   .answerWrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     background-color: rgb(226, 226, 226);
     margin-bottom: 10px;
     padding: 10px;
