--- a/components/BookFrontCover/bookFrontCover.module.scss
+++ b/components/BookFrontCover/bookFrontCover.module.scss
@@ -1,14 +1,15 @@
 .front {
   // background-color: #CAAA97;
-  background-color: var(--main-color);
+  // background-color: var(--main-color);
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #fff;
   
   img {
-    height: 350px;
-    margin-top: 20px;
+    height: 100%;
+    // margin-top: 20px;
   }
 
   h2 {
