--- a/components/TextSection/textSection.module.scss
+++ b/components/TextSection/textSection.module.scss
@@ -4,7 +4,8 @@
   margin: 5px;
   border-radius: 5px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-  mark {
+
+  mark.en {
     font-size: 1rem !important;
     background-color: transparent;
     /* background must be of type background image not color so we can animate it (Notice: linear-gradient is an background-image && second color is opacity: 0 coz we only need one color to highlight be we have to make it of type image got me ?)*/
@@ -20,6 +21,26 @@
     @keyframes highlight {
       to {
         background-position: 0 0;
+      }
+    } 
+  }
+
+  mark.ar {
+    font-size: 1rem !important;
+    background-color: transparent;
+    /* background must be of type background image not color so we can animate it (Notice: linear-gradient is an background-image && second color is opacity: 0 coz we only need one color to highlight be we have to make it of type image got me ?)*/
+    background: linear-gradient(270deg, #dfbf09 50%, rgba(255, 255, 255, 0) 50%);
+    /* background-size those values makes the background fill all the width of the text */
+    background-size: 200% 100%;
+    /* background-position 100% to move the background until it's hidden so we can show it with the animation */
+    background-position: 0 100%;
+    &:hover {
+	    animation: 20s highlight ease-out;
+    }
+
+    @keyframes highlight {
+      to {
+        background-position: 100% 0;
       }
     } 
   }
