--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,6 +24,9 @@ a {
 #ar {
   direction: rtl !important;
   text-align: right;
+  // canvas {
+  //   transform: rotateZ(180deg);
+  // }
 }
 
 .mainPage {
@@ -37,7 +40,7 @@ a {
 .demoPage, .cover {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
   background-color: var(--main-color);
-  // padding: 20px;
+  padding: 10px 0;
   border-radius: 5px !important;
   overflow: hidden;
   object-fit: contain;
@@ -115,18 +118,36 @@ a {
 
 .cover {
   // background-color: #CAAA97;
-  background-color: var(--main-color);
+  padding: 0;
+  background-color: #fff;
+  // background-color: var(--main-color);
+  img {
+    width: 100%;
+    height: 100% !important;
+    // margin-bottom: 20px;
+    // margin-top: 100px !important;
+  }
 }
 
 .cover h2 {
   text-align: center;
   position: relative;
   top: 45%;
-  color: #fff;
+  color: #000;
 }
 
 .demoPage img {
   width: 100%;
+}
+
+.demoPage {
+  h2 {
+    background-color: var(--main-color) !important;
+    color: #fff;
+    padding: 8px 20px;
+    border-radius: 5px;
+    font-size: 1.3rem;
+  }
 }
 
 button.wrapper {
@@ -145,4 +166,17 @@ button.wrapper {
     top: 0;
     z-index: -1;
   }
+}
+
+.label {
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin-top: 10px;
+}
+
+.flipBook {
+  // transform: rotate(180deg);
+  // .demoPage {
+  //   transform: scale(1, -1) !important;
+  // }
 }
