--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -38,17 +38,21 @@ a {
 } 
 
 .demoPage, .cover {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  background-color: var(--main-color);
+  // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  background-color: #965A3B;
   padding: 10px 0;
   border-radius: 5px !important;
   overflow: hidden;
   object-fit: contain;
+  div {
+    background-image: unset !important;
+  }
 }
 
 .demoPage {
   border-radius: 5px;
-  background: url('../public/imgs/back.png');
+  // background: url('../public/imgs/back.png');
+  background-color: unset !important;
   img {
     width: 100%;
     height: 100%;
@@ -119,7 +123,7 @@ a {
 .cover {
   // background-color: #CAAA97;
   padding: 0;
-  background-color: #fff;
+  background-color: #965A3B;
   // background-color: var(--main-color);
   img {
     width: 100%;
@@ -172,11 +176,4 @@ button.wrapper {
   font-weight: 600;
   font-size: 1.2rem;
   margin-top: 10px;
-}
-
-.flipBook {
-  // transform: rotate(180deg);
-  // .demoPage {
-  //   transform: scale(1, -1) !important;
-  // }
 }
