--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -26,31 +26,36 @@ $behance: #1769ff;
 
   // LIGHT MODE
   // --main-color: #4839eb;
-  --main-color: #40739e;
-  --dark-main-color: #356a96;
-  --light-main-color: #4782b3;
-  --bg-default: #fff;
-  --bg-element: #fff;
-  --custom: #000;
-  --bg-main: #96B8D4;
-  --alt-color: #f2b24e;
-  --dark-alt-color: #f2b24e;
-  --light-alt-color: #faca68;
-  --bg-alt: #fac96833;
-  --bg-color: #fff;
-  --bg-alt-color: #ECF1F5;
-  --text-color: #3c3c3d;
-  --light-text-color: #767676;
-  --muted-text-color: #a7a7a7;
-  --success: #45ca80;
-  --warning: #ff9f43;
-  --error: rgb(255, 116, 116);
-  --danger: #ea5455;
-  --info: #00cfe8;
-  --dark-success: #1f9d57;
-  --dark-warning: #ff8510;
-  --dark-danger: #e42728;
-  --dark-info: #00a1b5;
+  // --main-color: #40739e;
+  // --dark-main-color: #356a96;
+  // --light-main-color: #4782b3;
+  // --bg-default: #fff;
+  // --bg-element: #fff;
+  // --custom: #000;
+  // --bg-main: #96B8D4;
+  // --alt-color: #f2b24e;
+  // --dark-alt-color: #f2b24e;
+  // --light-alt-color: #faca68;
+  // --bg-alt: #fac96833;
+  // --bg-color: #fff;
+  // --bg-alt-color: #ECF1F5;
+  // --text-color: #3c3c3d;
+  // --light-text-color: #767676;
+  // --muted-text-color: #a7a7a7;
+  // --success: #45ca80;
+  // --warning: #ff9f43;
+  // --error: rgb(255, 116, 116);
+  // --danger: #ea5455;
+  // --info: #00cfe8;
+  // --dark-success: #1f9d57;
+  // --dark-warning: #ff8510;
+  // --dark-danger: #e42728;
+  // --dark-info: #00a1b5;
+
+  --first-color: #00A0D7;
+  --second-color: #EF4D94;
+  --third-color: #4DBEEE;
+  --forth-color: #7F3F98;
 
   // BORDERS
   --light-border: #60829e;
