--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -9,7 +9,7 @@
   .area {
     border: 2px solid var(--forth-color);
     padding: 40px;
-    border-radius: 5px;
+    border-radius: 30px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center; 
     background-color: var(--forth-color);
@@ -20,24 +20,25 @@
     input {
       width: 100%;
       border: 1px solid #ccc;
-      border-radius: 5px;
       padding: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       outline: none;
+      border-radius: 20px;
     }
 
     button {
       width: 50%;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 20px;
       padding: 10px;
       margin-bottom: 10px;
       color: #fff;
       cursor: pointer;
-      background-color: var(--first-color);
+      background-color: var(--second-color);
       // background-color: var(--forth-color);
       outline: none;
       border: none;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     }
   }
 }
