--- a/pages/levels/levels.module.scss
+++ b/pages/levels/levels.module.scss
@@ -1,16 +1,19 @@
+@import '../../styles/mixins.scss';
+
 .levels {
   direction: rtl !important;
   text-align: right !important;
   .wrapper {
-    // display: grid;
-    // place-items: center;
-    // grid-template-columns: repeat(auto-fit, 100px);
-    // gap: 10px;
-    // justify-content: center;
+    width: 100%;
+    height: 80vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 20px;
     flex-wrap: wrap;
+    @include xs {
+      height: auto;
+    }
     .one:nth-child(even) {
       background-color: var(--forth-color);
     }
@@ -32,6 +35,16 @@
       cursor: pointer;
       img {
         width: 100px;
+      }
+      @include md {
+        flex: 0 0 calc(50% - 20px);
+      }
+      @include sm {
+        flex: 0 0 calc(50% - 20px);
+      }
+      @include xs {
+        flex: 0 0 calc(100% - 20px);
+        margin-top: 0px;
       }
     }
   }
