--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -52,6 +52,7 @@ $behance: #1769ff;
   // --dark-danger: #e42728;
   // --dark-info: #00a1b5;
 
+  --main-color: #00A0D7;
   --first-color: #00A0D7;
   --second-color: #EF4D94;
   --third-color: #4DBEEE;
