--- a/components/QuizSection/quizSection.module.scss
+++ b/components/QuizSection/quizSection.module.scss
@@ -17,7 +17,7 @@
       z-index: -1;
     }
     &:hover {
-      border: 3px solid var(--main-color);
+      border: 3px solid var(--first-color);
     }
   }
 }
