--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -1,18 +1,38 @@
+@import '../styles/mixins.scss';
+
 .home {
   direction: rtl !important;
   text-align: right !important;
   .wrapper {
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(auto-fit, 100px);
-    gap: 10px;
+    display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
     .one:nth-child(even) {
       background-color: var(--second-color);
+      span {
+        background-color: #1EBDF1;
+      }
     }
     .one:nth-child(odd) {
       background-color: var(--first-color);
+      span {
+        background-color: #1EBDF1;
+      }
     }
+    .one:nth-child(3) {
+      background-color: var(--forth-color);
+      span {
+        background-color: #1EBDF1;
+      }
+    }
+    .one:nth-child(6) {
+      background-color: var(--forth-color);
+      span {
+        background-color: #1EBDF1;
+      }
+    }
+
     .one {
       padding: 20px;
       margin-top: 30px;
@@ -20,14 +40,39 @@
       text-align: center !important;
       border-radius: 30px;
       height: 200px;
-      grid-column: span 2;
+      flex: 0 0 calc(25% - 20px);
       width: 100%;
       display: grid;
       place-items: center;
       background-color: #fff;
       cursor: pointer;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
       img {
-        width: 80px;
+        width: 60px;
+        filter: drop-shadow(2px 2px 19px rgba(0, 0, 0, 0.5));
+      }
+      span {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        // background-color: #fff;
+        color: #fff;
+        display: grid;
+        place-items: center;
+        font-weight: 600;
+        font-size: 1.5rem;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      }
+      @include md {
+        flex: 0 0 calc(33.33% - 20px);
+      }
+      @include sm {
+        flex: 0 0 calc(50% - 20px);
+      }
+      @include xs {
+        flex: 0 0 calc(100% - 20px);
+        margin-top: 0px;
+        margin-bottom: 10px;
       }
     }
   }
