--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -1,44 +1,90 @@
+@import '../../styles/mixins.scss';
+
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: var(--first-color);
+  background: rgb(97,202,253);
+  background: linear-gradient(184deg, rgba(97,202,253,1) 0%, rgba(0,160,215,1) 100%);
   direction: rtl;
+  img {
+    width: 220px;
+    margin-bottom: 100px;
+    @include xs {
+      width: 180px;
+    }
+  }
   .area {
-    border: 2px solid var(--forth-color);
+    border: 1px solid #fff;
     padding: 40px;
     border-radius: 30px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center; 
-    background-color: var(--forth-color);
+    margin: 0 5px;
     h3 {
       margin-bottom: 30px;
       color: #fff;
     }
-    input {
-      width: 100%;
-      border: 1px solid #ccc;
-      padding: 10px;
-      margin-bottom: 20px;
-      outline: none;
-      border-radius: 20px;
+    .field {
+      position: relative;
+      input {
+        width: 100%;
+        border: 1px solid #ccc;
+        padding: 10px 40px;
+        margin-bottom: 20px;
+        outline: none;
+        border-radius: 20px;
+        min-width: 400px;
+        @include sm {
+          min-width: 350px;
+        }
+        @include xs {
+          min-width: 280px;
+        }
+      }
+      i {
+        position: absolute;
+        top: 50%;
+        right: 15px;
+        color: var(--forth-color);
+        transform: translateY(-90%);
+      }
+      &.ar {
+        i {
+          left: 15px;
+          right: unset;
+        }
+      }
     }
 
     button {
-      width: 50%;
+      width: 80%;
       border: 1px solid #ccc;
       border-radius: 20px;
       padding: 10px;
       margin-bottom: 10px;
       color: #fff;
       cursor: pointer;
-      background-color: var(--second-color);
-      // background-color: var(--forth-color);
+      background-color: var(--forth-color);
       outline: none;
       border: none;
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      position: relative;
+      i {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        font-size: 1.5rem;
+        transform: translateY(-50%);
+      }
+      &.ar {
+        i {
+          left: 10px;
+          right: unset;
+        }
+      }
     }
   }
 }
