--- a/components/BookFrontCover/bookFrontCover.module.scss
+++ b/components/BookFrontCover/bookFrontCover.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   color: #000;
   // height: 750px;
-  margin-top: 50%;
+  // margin-top: 50%;
   
   img {
     height: 100%;
