--- a/components/Page/page.module.scss
+++ b/components/Page/page.module.scss
@@ -1,4 +1,10 @@
 .page {
+  padding: 10px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 550px;
   .title {
     display: flex;
     justify-content: center;
@@ -6,5 +12,41 @@
     flex-direction: column;
     margin-top: 30px;
     margin-bottom: 0px;
+  }
+
+  .headPages {
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
+    // height: 100%;
+    // min-height: 550px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 1%;
+    img {
+      width: 90%;
+    }
+    .pageNum {
+      position: relative;
+      p {
+        width: 33px;
+        height: 33px;
+        border-radius: 50%;
+        display: grid;
+        place-items: center;
+        color: var(--main-color);
+        margin-top: 3px;
+        position: absolute;
+        top: 25%;
+        left: 25%;
+      }
+    }
   }
 }
