--- a/components/VideoSection/videoSection.module.scss
+++ b/components/VideoSection/videoSection.module.scss
@@ -1,16 +1,18 @@
 .videoSection {
   display: flex;
-  justify-content: center;
-  margin: 30px 0;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 0;
   button {
-    width: 100px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
     overflow: hidden;
     border: none;
     padding: 0;
     background-color: transparent;
     outline: none;
     padding: 5px;
+    margin: 0 20px;
     img {
       animation: rotate 5s infinite linear; 
     }
