--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,7 +37,7 @@ a {
 
 .demoPage, .cover {
   // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  background-color: #965A3B;
+  background-color: #088a19;
   padding: 10px 0;
   border-radius: 5px !important;
   overflow: hidden;
@@ -122,7 +122,7 @@ a {
 .cover {
   // background-color: #CAAA97;
   padding: 0;
-  background-color: #965A3B;
+  background-color: #088a19;
   height: 100%;
   // background-color: var(--main-color);
   img {
