--- a/components/quizzes/TrueAndFalse/trueAndFalse.module.scss
+++ b/components/quizzes/TrueAndFalse/trueAndFalse.module.scss
@@ -1,6 +1,9 @@
 .trueAndFalse {
   h6 {
     font-size: 1.2rem;
+    text-align: center !important;
+    margin-bottom: 1.5rem;
+    margin-top: 20px;
   }
   .question {
     display: flex;
