--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -83,4 +83,21 @@
     }
 
   }
+
+  .btn {
+    text-align: center;
+    margin-top: 30px;
+    button {
+      background-color: var(--main-color);
+      color: #fff;
+      border: 1px solid var(--main-color);
+      padding: 5px 20px;
+      border-radius: 5px;
+      outline: none;
+      &:hover {
+        background-color: transparent;
+        color: var(--main-color);
+      }
+    }
+  }
 }
