--- a/components/quizzes/FillInBlank/fillInBlank.module.scss
+++ b/components/quizzes/FillInBlank/fillInBlank.module.scss
@@ -3,11 +3,13 @@
     font-size: 1.2rem;
     text-align: center !important;
     margin-bottom: 1.5rem;
+    margin-top: 20px;
   }
   .text {
     background-color: rgb(235, 235, 235);
     padding: 20px;
     border-radius: 5px;
+    margin-bottom: 10px;
     input {
       border: none;
       outline: none;
