--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -30,6 +30,7 @@
     position: relative;
     animation: show 0.3s forwards ease-in-out 1;
     background: url('../../../public/imgs/back.png');
+    overflow-x: hidden;
     @keyframes show {
       0% {
         opacity: 0;
@@ -56,11 +57,11 @@
     }
     .close {
       position: absolute;
-      top: -15px;
-      right: -15px;
+      top: 0px;
+      right: 0px;
       width: 40px;
       height: 40px;
-      border-radius: 50%;
+      border-radius: 0%;
       cursor: pointer;
       background-color: #000;
       border: 1px solid #000;
@@ -75,7 +76,7 @@
       }
       &.ar {
         right: unset;
-        left: -15px;
+        left: 0px;
       }
     }
 
