--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -1,4 +1,17 @@
 .matching {
+  &.animation {
+    animation: show 1s forwards;
+  }
+  @keyframes show {
+    0%{
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
   .wrapper {
     margin-top: 50px;
     display: flex;
