--- a/components/quizzes/OrderingQuiz/orderingQuiz.module.scss
+++ b/components/quizzes/OrderingQuiz/orderingQuiz.module.scss
@@ -1,5 +1,18 @@
 .orderingQuiz {
   text-align: center !important;
+  &.animation {
+    animation: show 1s forwards;
+  }
+  @keyframes show {
+    0%{
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
   h6 {
     font-size: 1.3rem;
   }
