--- a/components/quizzes/TrueAndFalse/trueAndFalse.module.scss
+++ b/components/quizzes/TrueAndFalse/trueAndFalse.module.scss
@@ -1,4 +1,17 @@
 .trueAndFalse {
+  &.animation {
+    animation: show 1s forwards;
+  }
+  @keyframes show {
+    0%{
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
   h6 {
     font-size: 1.2rem;
     text-align: center !important;
