finish main layout

--- a/components/Loader/loader.module.scss
+++ b/components/Loader/loader.module.scss
@@ -38,7 +38,7 @@
       width: 8px;
       height: 18px;
       border-radius: 20%;
-      background: var(--main-color);
+      background: var(--book-color);
       @include xs {
         width: 5px;
         height: 15px;
