--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,8 +25,8 @@ $behance: #1769ff;
   --error-alert: #ee5253;
 
   // LIGHT MODE
-  // --main-color: #4839eb;
-  // --main-color: #40739e;
+  // --book-color: #4839eb;
+  // --book-color: #40739e;
   // --dark-main-color: #356a96;
   // --light-main-color: #4782b3;
   // --bg-default: #fff;
@@ -52,7 +52,8 @@ $behance: #1769ff;
   // --dark-danger: #e42728;
   // --dark-info: #00a1b5;
 
-  --main-color: #3AB54A;
+  --book-color: #fff;
+  --main-color: #00A0D7;
   --first-color: #00A0D7;
   --second-color: #EF4D94;
   --third-color: #4DBEEE;
