--- a/components/BookFrontCover/bookFrontCover.module.scss
+++ b/components/BookFrontCover/bookFrontCover.module.scss
@@ -1,15 +1,18 @@
 .front {
   // background-color: #CAAA97;
-  // background-color: var(--main-color);
+  // background-color: var(--book-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #000;
+  height: 100%;
   // height: 750px;
   // margin-top: 50%;
   
   img {
+    width: 100%;
     height: 100%;
+    object-fit: cover;
     // margin-top: 20px;
   }
 
