--- a/components/ImageSection/imageSection.module.scss
+++ b/components/ImageSection/imageSection.module.scss
@@ -1,8 +1,13 @@
+@import '../../styles/mixins.scss';
+
 .imageSection {
   img {
     width: 100%;
     height: auto;
     max-height: 250px;
-    // object-fit: contain;
+    // object-fit: cover;
+    @include xs {
+      max-height: 200px;
+    }
   }
 }
