--- a/components/TextSection/textSection.module.scss
+++ b/components/TextSection/textSection.module.scss
@@ -1,9 +1,16 @@
+@import '../../styles/mixins.scss';
+
 .textSection {
   padding: 20px;
   border: 1px solid rgb(230, 230, 230);
   margin: 5px;
   border-radius: 5px;
   font-family: 'Amiri', serif !important;
+  @include xs {
+    font-size: 0.9rem !important;
+    line-height: 25px !important;
+    padding: 10px;
+  }
   // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 
   mark.en {
@@ -24,6 +31,10 @@
         background-position: 0 0;
       }
     } 
+    @include xs {
+      font-size: 0.9rem !important;
+      line-height: 25px !important;
+    }
   }
 
   mark.ar {
@@ -35,6 +46,7 @@
     background-size: 200% 100%;
     /* background-position 100% to move the background until it's hidden so we can show it with the animation */
     background-position: 0 100%;
+    line-height: 35px;
     &:hover {
 	    animation: 20s highlight ease-out;
     }
@@ -44,5 +56,9 @@
         background-position: 100% 0;
       }
     } 
+    @include xs {
+      font-size: 0.9rem !important;
+      line-height: 25px !important;
+    }
   }
 }
