--- a/components/VideoSection/videoSection.module.scss
+++ b/components/VideoSection/videoSection.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/mixins.scss';
+
 .videoSection {
   display: flex;
   justify-content: space-around;
@@ -15,6 +17,11 @@
     margin: 0 20px;
     img {
       animation: rotate 5s infinite linear; 
+    }
+    @include xs {
+      width: 60px;
+      height: 60px;
+      margin: 0 10px;
     }
   }
   @keyframes rotate {
