--- a/components/modals/PreviewModal/previewModal.module.scss
+++ b/components/modals/PreviewModal/previewModal.module.scss
@@ -69,8 +69,8 @@
       align-items: center;
       transition: all 0.2s ease-in-out !important;
       &:hover {
-        background-color: var(--main-color);
-        border: 1px solid var(--main-color);
+        background-color: var(--book-color);
+        border: 1px solid var(--book-color);
       }
       &.ar {
         right: unset;
