--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -29,7 +29,7 @@
     max-height: 90%;
     position: relative;
     animation: show 0.3s forwards ease-in-out 1;
-    background: url('../../../public/imgs/back.png');
+    // background: url('../../../public/imgs/back.png');
     overflow-x: hidden;
     @keyframes show {
       0% {
@@ -71,8 +71,8 @@
       align-items: center;
       transition: all 0.2s ease-in-out !important;
       &:hover {
-        background-color: var(--main-color);
-        border: 1px solid var(--main-color);
+        background-color: var(--book-color);
+        border: 1px solid var(--book-color);
       }
       &.ar {
         right: unset;
@@ -89,15 +89,15 @@
     text-align: center;
     margin-top: 30px;
     button {
-      background-color: var(--main-color);
+      background-color: var(--book-color);
       color: #fff;
-      border: 1px solid var(--main-color);
+      border: 1px solid var(--book-color);
       padding: 5px 20px;
       border-radius: 5px;
       outline: none;
       &:hover {
         background-color: transparent;
-        color: var(--main-color);
+        color: var(--book-color);
       }
     }
   }
