--- a/components/quizzes/FillInBlank/fillInBlank.module.scss
+++ b/components/quizzes/FillInBlank/fillInBlank.module.scss
@@ -28,7 +28,7 @@
       outline: none;
       width: 150px;
       background-color: transparent !important;
-      color: var(--main-color);
+      color: var(--book-color);
       &.error {
         color: red !important;
       }
@@ -39,9 +39,9 @@
     text-align: center;
     margin-top: 30px;
     button {
-      background-color: var(--main-color);
+      background-color: var(--book-color);
       color: #fff;
-      border: 1px solid var(--main-color);
+      border: 1px solid var(--book-color);
       padding: 5px 20px;
       border-radius: 5px;
       outline: none;
@@ -54,7 +54,7 @@
       }
       &:hover {
         background-color: transparent;
-        color: var(--main-color);
+        color: var(--book-color);
       }
     }
   }
