--- a/components/quizzes/Matching/matching.module.scss
+++ b/components/quizzes/Matching/matching.module.scss
@@ -19,7 +19,7 @@
     p {
       font-weight: 600;
       color: #fff;
-      background-color: rgb(#40739e, 0.8);
+      background-color: rgb(103, 103, 103);
       // padding: 8px 10px;
       border-radius: 5px;
       width: 150px;
@@ -48,15 +48,15 @@
     text-align: center;
     margin-top: 30px;
     button {
-      background-color: var(--main-color);
+      background-color: var(--book-color);
       color: #fff;
-      border: 1px solid var(--main-color);
+      border: 1px solid var(--book-color);
       padding: 5px 20px;
       border-radius: 5px;
       outline: none;
       &:hover {
         background-color: transparent;
-        color: var(--main-color);
+        color: var(--book-color);
       }
     }
   }
