--- a/styles/extends.scss
+++ b/styles/extends.scss
@@ -7,15 +7,15 @@
   text-align: center !important;
   padding: 10px 30px;
   border-radius: 20px;
-  background-color: var(--main-color);
-  border: 1px solid var(--main-color);
+  background-color: var(--book-color);
+  border: 1px solid var(--book-color);
   outline: none;
   color: #fff;
   cursor: pointer;
   &:hover {
     background-color: transparent;
-    border: 1px solid var(--main-color);
-    color: var(--main-color)
+    border: 1px solid var(--book-color);
+    color: var(--book-color)
   }
 }
 
@@ -32,9 +32,9 @@
   font-size: 20px;
   color: rgb(107, 107, 107);
   &:hover {
-    background-color: var(--main-color);
+    background-color: var(--book-color);
     color: #fff;
-    border: 1px solid var(--main-color);
+    border: 1px solid var(--book-color);
   }
 }
  
@@ -42,7 +42,7 @@
   margin-bottom: 30px;
   font-size: 28px;
   position: relative;
-  color: var(--main-color);
+  color: var(--book-color);
   display: inline-block;
 
   &::before {
@@ -54,7 +54,7 @@
     width: 100%;
     height: 18px;
     z-index: -1;
-    background: linear-gradient(to left, transparent 0%, var(--main-color) 100%);
+    background: linear-gradient(to left, transparent 0%, var(--book-color) 100%);
     opacity: 0.3;
   }
   &.ar {
@@ -62,7 +62,7 @@
       left: unset;
       right: 0;
       width: 100%;
-      background: linear-gradient(to right, transparent 0%, var(--main-color) 100%);
+      background: linear-gradient(to right, transparent 0%, var(--book-color) 100%);
 
       @include sm {
         height: 13px;
@@ -78,8 +78,8 @@
 
 // Buttons
 %btn {
-  border: 1.5px solid var(--main-color);
-  background: var(--main-color);
+  border: 1.5px solid var(--book-color);
+  background: var(--book-color);
   padding: 11px 35px;
   color: #000;
   outline: none !important;
@@ -93,7 +93,7 @@
   }
 
   &:hover {
-    border-color: var(--main-color);
+    border-color: var(--book-color);
   }
   @include xs {
     padding: 6px 25px;
@@ -102,8 +102,8 @@
 }
 
 %formBtn {
-  border: 1.5px solid var(--main-color);
-  background: var(--main-color);
+  border: 1.5px solid var(--book-color);
+  background: var(--book-color);
   padding: 11px 35px;
   color: #fff;
   outline: none !important;
@@ -118,7 +118,7 @@
   }
 
   &:hover {
-    border-color: var(--main-color);
+    border-color: var(--book-color);
   }
   @include xs {
     font-size: 14px;
@@ -138,7 +138,7 @@
   margin: auto;
 
   &::placeholder {
-    color: var(--main-color);
+    color: var(--book-color);
   }
 
   &:focus {
