--- a/components/Flippy/Flippy.module.scss
+++ b/components/Flippy/Flippy.module.scss
@@ -1,6 +1,6 @@
 .flippy_container {
   overflow: hidden;
-  margin: 10px;
+  // margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
