--- a/components/quizzes/ImageAnswering/imageAnswering.module.scss
+++ b/components/quizzes/ImageAnswering/imageAnswering.module.scss
@@ -70,6 +70,13 @@
       padding: 5px 20px;
       border-radius: 5px;
       outline: none;
+      i {
+        &.ar {
+          &.next {
+            transform: rotate(180deg);
+          }
+        }
+      }
       &:hover {
         background-color: transparent;
         color: var(--book-color);
