--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -26,11 +26,12 @@
     background-color: #fff;
     width: 800px;
     height: auto;
-    max-height: 90%;
+    max-height: 80%;
     position: relative;
     animation: show 0.3s forwards ease-in-out 1;
     // background: url('../../../public/imgs/back.png');
     overflow-x: hidden;
+    padding-bottom: 20px;
     @keyframes show {
       0% {
         opacity: 0;
