--- a/components/quizzes/ImageAnswering/imageAnswering.module.scss
+++ b/components/quizzes/ImageAnswering/imageAnswering.module.scss
@@ -28,7 +28,7 @@
     .one {
       border-radius: 5px;
       margin: 20px 10px 0;
-      grid-column: span 4;
+      grid-column: span 3;
       text-align: center !important;
       @include md {
         grid-column: span 6;
@@ -40,9 +40,10 @@
         grid-column: span 12;
       }
       img {
-        width: 150px;
+        width: 120px;
+        height: 100px;
         border-radius: 5px;
-        margin-right: 30px;
+        margin-right: 0px;
         display: block;
         text-align: center !important;
         margin: 0 auto 20px;
@@ -56,6 +57,7 @@
         padding: 5px 15px;
         margin: auto;
         text-align: center !important;
+        width: 150px;
       }
     }
   }
