--- a/components/modals/PreviewModal/previewModal.module.scss
+++ b/components/modals/PreviewModal/previewModal.module.scss
@@ -79,6 +79,22 @@
     }
 
     .area__content {
+      &.arabic {
+        direction: rtl !important;
+        text-align: right !important;
+        * {
+          direction: rtl !important;
+          text-align: right !important;
+        }
+      }
+      &.english {
+        direction: ltr !important;
+        text-align: left !important;
+        * {
+          direction: ltr !important;
+          text-align: left !important;
+        }
+      }
       img {
         width: 100%;
       }
