--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -82,6 +82,22 @@
     }
 
     .area__content {
+      &.arabic {
+        direction: rtl !important;
+        text-align: right !important;
+        * {
+          direction: rtl !important;
+          text-align: right !important;
+        }
+      }
+      &.english {
+        direction: ltr !important;
+        text-align: left !important;
+        * {
+          direction: ltr !important;
+          text-align: left !important;
+        }
+      }
     }
 
   }
