--- a/components/modals/QuizModal/quizModal.module.scss
+++ b/components/modals/QuizModal/quizModal.module.scss
@@ -84,18 +84,18 @@
     .area__content {
       &.arabic {
         direction: rtl !important;
-        text-align: right !important;
+        // text-align: right;
         * {
           direction: rtl !important;
-          text-align: right !important;
+          // text-align: right;
         }
       }
       &.english {
         direction: ltr !important;
-        text-align: left !important;
+        // text-align: left !important;
         * {
           direction: ltr !important;
-          text-align: left !important;
+          // text-align: left !important;
         }
       }
     }
