--- a/components/Loader/loader.module.scss
+++ b/components/Loader/loader.module.scss
@@ -23,8 +23,9 @@
     }
   }
   img {
+    width: 100px !important;
     margin-left: 70px;
-    margin-bottom: 10px;
+    margin-bottom: 10px !important;
   }
   div {
     transform-origin: 40px 40px;
