--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -14,6 +14,7 @@
     margin-bottom: 100px;
     @include xs {
       width: 180px;
+      margin-bottom: 50px;
     }
   }
   .area {
@@ -23,6 +24,10 @@
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     text-align: center; 
     margin: 0 15px;
+    @include xs {
+      width: 90%;
+      padding: 20px;
+    }
     h3 {
       margin-bottom: 30px;
       color: #fff;
@@ -41,7 +46,7 @@
           min-width: 350px;
         }
         @include xs {
-          min-width: 280px;
+          min-width: 250px;
         }
       }
       i {
