fix some issues

--- a/components/Page/page.module.scss
+++ b/components/Page/page.module.scss
@@ -58,6 +58,10 @@
           left: 8%;
           font-size: 0.8rem;
         }
+        &.numWithNoImg {
+          position: relative;
+          top: -25%;
+        }
       }
       &.english {
         p {
