--- a/components/VideoSection/videoSection.module.scss
+++ b/components/VideoSection/videoSection.module.scss
@@ -22,6 +22,9 @@
     margin: 0 20px;
     img {
       animation: rotate 5s infinite linear; 
+      object-fit: contain;
+      width: 100px;
+      height: 70px;
     }
     @include xs {
       width: 55px;
