--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -144,9 +144,8 @@ a {
 .cover {
   // background-color: #CAAA97;
   padding: 0;
-  background-color: #088a19;
   height: 100%;
-  // background-color: var(--book-color);
+  background-color: var(--book-color);
   img {
     width: 100%;
     height: 100% !important;
@@ -204,13 +203,14 @@ button.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   .step, .lastStep {
     position: relative;
     margin: 0 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     p {
       width: 50px;
       height: 50px;
@@ -241,7 +241,7 @@ button.wrapper {
       content: ' ';
       position: absolute;
       top: 25%;
-      left: -140%;
+      left: -108%;
       width: 130px;
       border: 8px dashed var(--book-color);
       border-bottom: 0px dashed var(--book-color);
@@ -256,7 +256,7 @@ button.wrapper {
     .step {
       &:after {
         left: 85%;
-        width: 120px;
+        width: 150px;
       }
     }
   }
@@ -308,4 +308,18 @@ button.wrapper {
       box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     }
   }
+}
+
+.quesImage  {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 20px;
+}
+
+.quizHelpers {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
 }
